--- a/template/Auth/index.html
+++ b/template/Auth/index.html
@@ -26,6 +26,7 @@
     <script src="static/hexgrid/Hex.js?var=119yddd110ddjjdd1"></script>
     <script src="static/hexgrid/HexGridMenu.js?var=aj1"></script>
     <script src="static/hexgrid/HexGrid.js?var=1k1ddj1d2dd23123811"></script>
+    <script src="static/hexgrid/UIEventHandlers/UIEventHandlerBase.js?var=1k1ddj1d2dd23123811"></script>
     <link rel="stylesheet" href="static/hexgrid/HexGrid.css?var=2">
 
     <script src="static/responsive-tabs/jquery.responsiveTabs.min.js"></script>
