イベントハンドラ付きＵＩのベースを作成

--- a/template/Auth/index.html
+++ b/template/Auth/index.html
@@ -27,6 +27,8 @@
     <script src="static/hexgrid/HexGridMenu.js?var=aj1"></script>
     <script src="static/hexgrid/HexGrid.js?var=1k1ddj1d2dd23123811"></script>
     <script src="static/hexgrid/UIEventHandlers/UIEventHandlerBase.js?var=1k1ddj1d2dd23123811"></script>
+    <script src="static/hexgrid/UIEventHandlers/UIEventHandlerOnClickHex.js?var=1k1ddj1d2dd23123811"></script>
+    <script src="static/hexgrid/UIEventHandlers/UIElementHelper.js?var=1k1ddj1d2dd23123811"></script>
     <link rel="stylesheet" href="static/hexgrid/HexGrid.css?var=2">
 
     <script src="static/responsive-tabs/jquery.responsiveTabs.min.js"></script>
