--- a/template/Auth/index.html
+++ b/template/Auth/index.html
@@ -22,12 +22,13 @@
 
     <script src="static/hexgrid/BJSocket.js?var=1.1120d1111"></script>
     <script src="static/hexgrid/BBSCountry.js?var=43dddddf1"></script>
-    <script src="static/hexgrid/HexGridMessage.js?var=43dddddf1"></script>
+    <script src="static/hexgrid/HexGridMessage.js?var=43ddddf1"></script>
     <script src="static/hexgrid/Hex.js?var=119yddd110ddjjdd1"></script>
-    <script src="static/hexgrid/HexGridMenu.js?var=aj1"></script>
     <script src="static/hexgrid/HexGrid.js?var=1k1ddj1d2dd23123811"></script>
+
     <script src="static/hexgrid/UIEventHandlers/UIEventHandlerBase.js?var=1k1ddj1d2dd23123811"></script>
     <script src="static/hexgrid/UIEventHandlers/UIEventHandlerOnClickHex.js?var=1k1ddj1d2dd23123811"></script>
+    <script src="static/hexgrid/UIEventHandlers/UIEventHandlerOnCancel.js?var=1k1ddj1d2dd23123811"></script>
     <script src="static/hexgrid/UIEventHandlers/UIElementHelper.js?var=1k1ddj1d2dd23123811"></script>
     <link rel="stylesheet" href="static/hexgrid/HexGrid.css?var=2">
 
@@ -50,17 +51,9 @@
     <div id="tab-1">
         <div id="hexgrid_container" class="hexgrid_container">
                 <canvas id="field" class="field"></canvas>
-                <ul class="orbit" id="orbit">
-                    <li id="war">戦争
-                        <ul>
-                            <li id="move">進軍</li>
-                        </ul>
-                    </li>
-                    <li id="pol">内政</li>
-                    <li id="mil">軍事</li>
 
-                </ul>
-            </div> </div>
+        </div>
+    </div>
     <div id="tab-2">
         <textarea cols="100" rows="10" disabled wrap="hard" id="text_box"></textarea>
     </div>
