--- a/template/Auth/index.html
+++ b/template/Auth/index.html
@@ -29,6 +29,7 @@
     <script src="static/hexgrid/UIEventHandlers/UIEventHandlerBase.js?var=1k1ddj1d2dd23123811"></script>
     <script src="static/hexgrid/UIEventHandlers/UIEventHandlerOnClickHex.js?var=1k1ddj1d2dd23123811"></script>
     <script src="static/hexgrid/UIEventHandlers/UIEventHandlerOnCancel.js?var=1k1ddj1d2dd23123811"></script>
+    <script src="static/hexgrid/UIEventHandlers/UIEventHandlerOnNotify.js?var=1k1ddj1d2dd23123811"></script>
     <script src="static/hexgrid/UIEventHandlers/UIElementHelper.js?var=1k1ddj1d2dd23123811"></script>
     <link rel="stylesheet" href="static/hexgrid/HexGrid.css?var=2">
 
@@ -50,7 +51,7 @@
 
     <div id="tab-1">
         <div id="hexgrid_container" class="hexgrid_container">
-                <canvas id="field" class="field"></canvas>
+                <canvas id="field" class="field" style="background-color:black;"></canvas>
 
         </div>
     </div>
